opsiconfd (4.0.6.5-1) UNRELEASED; urgency=medium

  * Showing what the actual error was that was experienced when collecting statistics.
  * Showing the time of service start on the info page.
  * simplify logrotate config.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Mon, 13 Jul 2015 10:20:29 +0200

opsiconfd (4.0.6.4-12) experimental; urgency=medium

  * Ignore error from pkg-config in postinst.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 17 Jun 2015 10:42:56 +0200

opsiconfd (4.0.6.4-11) experimental; urgency=medium

  * Correct name of service file.
  * More error resistant installation.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 17 Jun 2015 09:43:22 +0200

opsiconfd (4.0.6.4-10) experimental; urgency=medium

  * Improving the removal of the service files.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 16 Jun 2015 16:54:04 +0200

opsiconfd (4.0.6.4-9) experimental; urgency=medium

  * RPM: Removing debug package.
  * RPM: small fix in postinst-script.
  * RPM: removing service file on uninstall
  * RPM: require pkgconfig for RedHat family, pkg-config for suse family

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 16 Jun 2015 14:03:08 +0200

opsiconfd (4.0.6.4-8) experimental; urgency=medium

  * RPM: creating folder for systemd templates before installation

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 16 Jun 2015 13:21:03 +0200

opsiconfd (4.0.6.4-7) experimental; urgency=medium

  * Debian: lintian-override fix

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 16 Jun 2015 12:09:55 +0200

opsiconfd (4.0.6.4-6) experimental; urgency=medium

  * Debian: extending lintian-overrides for Debian 8

 -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 16 Jun 2015 12:02:16 +0200

opsiconfd (4.0.6.4-5) experimental; urgency=medium

  * Debian: changing package format to 1.0 so Jessy is happy.
  * Rewrote the way that the systemd unitfile is integrated.
  * Removed references to opsi-distutils.
